[package]
name = "wasmy"
version = "0.4.0"
edition = "2021"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
description = "wasmy, easily customize my wasm app!"
license = "Apache-2.0"
repository = "https://github.com/henrylee2cn/wasmy"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "wasm-app"]
readme = "./README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[target.'cfg(not(target_family="wasm"))'.dependencies]
wasmy-vm = "0.4.0"
structopt = { version = "0.3", features = ["color"] }
[[example]]
name = "vm"
path = "./examples/vm/vm.rs"


[target.'cfg(target_family="wasm")'.dependencies]
wasmy-abi = "0.4.0"
rand = "0.8.4"
[[example]]
crate-type = ['cdylib']
name = "simple"
path = "./examples/wasm/simple.rs"
[[example]]
crate-type = ['cdylib']
name = "onload"
path = "./examples/wasm/onload.rs"

[workspace]
members = [
    "wasmy-abi",
    "wasmy-vm",
    "wasmy-macros",
]
exclude = []

