[package]
name = "wasmy"
version = "0.5.0"
edition = "2021"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
description = "wasmy, easily customize my wasm app!"
license = "Apache-2.0"
repository = "https://github.com/henrylee2cn/wasmy"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "wasm-app"]
readme = "./README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[target.'cfg(not(target_family="wasm"))'.dependencies]
wasmy-vm = "0.5.0"
structopt = { version = "0.3", features = ["color"] }
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
[[example]]
name = "svm"
path = "examples/vm/svm.rs"
[[example]]
name = "dvm"
path = "examples/vm/dvm.rs"


[target.'cfg(target_family="wasm")'.dependencies]
wasmy-abi = "0.5.0"
rand = "0.8.4"
[[example]]
crate-type = ['cdylib']
name = "simple"
path = "./examples/wasm/simple.rs"
[[example]]
crate-type = ['cdylib']
name = "detailed"
path = "examples/wasm/detailed.rs"
[[example]]
crate-type = ['cdylib']
name = "custom_context"
path = "examples/wasm/custom_context.rs"


[workspace]
members = [
    "wasmy-abi",
    "wasmy-vm",
    "wasmy-macros",
]
exclude = []

