[package]
name = "wasmy"
version = "0.5.6"
edition = "2021"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
description = "wasmy, easily customize my wasm app!"
license = "Apache-2.0"
repository = "https://github.com/henrylee2cn/wasmy"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "wasm-app"]
readme = "./README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
wasmy-vm = { version ="0.5.6", features = [] }
structopt = { version = "0.3", features = ["color"] }
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
[[example]]
name = "svm"
path = "examples/vm/svm.rs"
[[example]]
name = "dvm"
path = "examples/vm/dvm.rs"
[[example]]
name = "cvm"
path = "examples/vm/cvm.rs"


[target.'cfg(target_family="wasm")'.dev-dependencies]
wasmy-abi = "0.5.6"
rand = "0.8.4"
[[example]]
crate-type = ['cdylib']
name = "simple"
path = "./examples/wasm/simple.rs"
[[example]]
crate-type = ['cdylib']
name = "detailed"
path = "examples/wasm/detailed.rs"
[[example]]
crate-type = ['cdylib']
name = "context"
path = "examples/wasm/context.rs"
[[example]]
crate-type = ['cdylib']
name = "custom"
path = "examples/wasm/custom.rs"


[workspace]
members = [
    "wasmy-abi",
    "wasmy-vm",
    "wasmy-macros",
]
exclude = []

