[package]
name = "wasmy-abi"
version = "0.3.3"
edition = "2021"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
description = "ABI of wasmy (easily customize my wasm app)"
license = "Apache-2.0"
repository = "https://github.com/henrylee2cn/wasmy"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "wasm-app"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmy-macros = "0.3.3"
protobuf = { version = "2", features = ["with-bytes"] }
anyhow = "1"

[build-dependencies]
protoc-rust = "2.0"
