[package]
name = "wasmy-abi"
version = "0.5.6"
edition = "2021"
resolver = "2"
authors = ["andeya <andeyalee@outlook.com>"]
description = "ABI of wasmy (easily customize my wasm app)"
license = "Apache-2.0"
repository = "https://github.com/andeya/wasmy"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "wasm-app"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmy-macros = "0.5.6"
protobuf = { version = "2", features = ["with-bytes"] }
anyhow = "1"

[target.'cfg(not(target_family="wasm"))'.dependencies]
wasmer = "2.0.0"
wasmer-wasi = "2.0.0"

[build-dependencies]
protoc-rust = "2.0"
