[package]
name = "wasmy-macros"
version = "0.5.6"
edition = "2021"
resolver = "2"
authors = ["andeya <andeyalee@outlook.com>"]
description = "macros of wasmy (easily customize my wasm app)"
license = "Apache-2.0"
repository = "https://github.com/andeya/wasmy"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "wasm-app"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.7"

