[package]
name = "wasmy-vm"
version = "0.5.6"
edition = "2021"
resolver = "2"
authors = ["andeya <andeyalee@outlook.com>"]
description = "virtual machine of wasmy (easily customize my wasm app)"
license = "Apache-2.0"
repository = "https://github.com/andeya/wasmy"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "wasm-app"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmy-macros = "0.5.6"
wasmy-abi = "0.5.6"
inventory = "0.3.1"
wasmer = "3.0.0-beta"
wasmer-wasi = "3.0.0-beta"
wasmer-compiler-cranelift = { version = "3.0.0-beta", optional = true }
wasmer-compiler-llvm = { version = "3.0.0-beta", optional = true }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
protobuf = { version = "2", features = ["with-bytes"] }
lazy_static = "1.4.0"

[features]
default = ["wasmer-compiler-cranelift"]
llvm = ["wasmer-compiler-llvm"]
