[package]
name = "wasmy"
version = "0.3.1"
edition = "2021"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
description = "wasmy, easily customize my wasm app!"
license = "Apache-2.0"
repository = "https://github.com/henrylee2cn/wasmy"
categories = ["wasm"]
keywords = ["wasm", "webassembly", "wasm-app"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
