[package]
name = "wasmy"
version = "0.2.0"
edition = "2021"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmy-vm = { path = "../../wasmy-vm" }
structopt = { version = "0.3", features = ["color"] }
